objects/rh2__PS_Rollup_Audit__c.object
<CustomObject>
    <description>Tracks field history on Date Sync</description>
    <fields>
        <fullName>rh2__Blank_Overwrite__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Controls whether Rollup Helper will overwrite populated fields with a blank value.</description>
        <inlineHelpText>Controls whether Rollup Helper will overwrite populated fields with a blank value.</inlineHelpText>
        <label>Blank Overwrite fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Dedup_Flag__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Controls whether Rollup Helper will deduplicate multipicklist values when rolling them up</description>
        <inlineHelpText>Controls whether Rollup Helper will deduplicate multipicklist values when rolling them up</inlineHelpText>
        <label>Dedup Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Disable_Realtime__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls whether the Rollup can be triggered in real-time.</description>
        <inlineHelpText>Controls whether the Rollup can be triggered in real-time.</inlineHelpText>
        <label>Disable Realtime Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Last_Activation_Change__c</fullName>
        <description>String of the date and time the rollup&apos;s active status was changed</description>
        <inlineHelpText>String of the date and time the rollup&apos;s active status was changed</inlineHelpText>
        <label>Last Activation Change</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Last_Active_Status_Changed_By__c</fullName>
        <description>Who last changed the active status of this rollup</description>
        <inlineHelpText>Who last changed the active status of this rollup</inlineHelpText>
        <label>Last Active Status Changed By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Last_Run_Date__c</fullName>
        <description>Last Manual Rollup Run Date</description>
        <label>Last Manual Rollup Run Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Last_Run_User__c</fullName>
        <description>Last Manual Rollup Run User</description>
        <inlineHelpText>Last Manual Rollup Run User</inlineHelpText>
        <label>Last Manual Rollup Run User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Null_counts_toward_average__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether a null counts as a zero when calculating an AVG Rollup.</description>
        <inlineHelpText>Determines whether a null counts as a zero when calculating an AVG Rollup.</inlineHelpText>
        <label>Nulls Count Toward Average</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Number_Of_Past_Records__c</fullName>
        <label>Number of Records For Last Manual Rollup</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rh2__Overwrite__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Controls whether Rollup Helper will overwrite populated fields.</description>
        <inlineHelpText>Controls whether Rollup Helper will overwrite populated fields.</inlineHelpText>
        <label>Overwrite fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Parent_Record_Filter_Name__c</fullName>
        <label>Last Manual Parent Filter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Remove_Trailing_Delimeters__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls whether Rollup Helper will trim any delimiters that would be placed at the end of the rolled-up text value.</description>
        <inlineHelpText>Controls whether Rollup Helper will trim any delimiters that would be placed at the end of the rolled-up text value.</inlineHelpText>
        <label>Remove Trailing Delimeters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__RollupLabel__c</fullName>
        <description>Label for the rollup (the value that is displayed to the user, as opposed to the name value which is used internally)</description>
        <inlineHelpText>Label for the rollup (the value that is displayed to the user, as opposed to the name value which is used internally)</inlineHelpText>
        <label>Rollup Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Rollup_Groups__c</fullName>
        <description>Rollup Group Names this rollup belongs to</description>
        <inlineHelpText>Rollup Group Names this rollup belongs to</inlineHelpText>
        <label>Rollup Groups</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__SourceFieldObject__c</fullName>
        <description>The sObject of the Lookup Field</description>
        <inlineHelpText>The sObject of the Lookup Field</inlineHelpText>
        <label>Source Field Object</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__appendTrailingWhitespace__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Controls whether TXT rollups will append a space at the end of each delimiter.</description>
        <inlineHelpText>Controls whether TXT rollups will append a space at the end of each delimiter.</inlineHelpText>
        <label>Append Trailing Whitespace</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__append__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Controls whether TXT rollups will append text while overwrite is turned off.</description>
        <inlineHelpText>Controls whether TXT rollups will append text while overwrite is turned off.</inlineHelpText>
        <label>Append to target field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__condition__c</fullName>
        <description>Name of the filter on this rollups, if one exists.</description>
        <inlineHelpText>Name of the filter on this rollups, if one exists.</inlineHelpText>
        <label>Condition</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__conditional__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Controls whether the rollup is active.</description>
        <inlineHelpText>Controls whether the rollup is active.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__conversionDate__c</fullName>
        <description>Custom conversion date for multicurrency orgs.</description>
        <inlineHelpText>Custom conversion date for multicurrency orgs.</inlineHelpText>
        <label>Conversion Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__createdBy__c</fullName>
        <description>The user that created the rollup.</description>
        <inlineHelpText>The user that created the rollup.</inlineHelpText>
        <label>Rollup Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__createdDate__c</fullName>
        <description>String of the date and time the rollup was created.</description>
        <inlineHelpText>String of the date and time the rollup was created.</inlineHelpText>
        <label>Rollup Created Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__delim__c</fullName>
        <description>Stores custom delimiter for concatenated rollups</description>
        <inlineHelpText>Stores custom delimiter for concatenated rollups</inlineHelpText>
        <label>Delimiter</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__description__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <description>The description of the Rollup.</description>
        <inlineHelpText>The description of the Rollup.</inlineHelpText>
        <label>Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__disable_multipicklist_split__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls whether Rollup Helper will count each selection in a multipicklist as a separate child value.</description>
        <inlineHelpText>Controls whether Rollup Helper will count each selection in a multipicklist as a separate child value.</inlineHelpText>
        <label>Disable Multipicklist Split</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__enumerateResults__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls whether TXT rollups will number each child record value.</description>
        <inlineHelpText>Controls whether TXT rollups will number each child record value.</inlineHelpText>
        <label>Enumerate Text Rollup Results</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__escapeSpecialCharacters__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When checked, will escape special reserved characters in SOQL</description>
        <inlineHelpText>When checked, will escape special reserved characters in SOQL</inlineHelpText>
        <label>Escape Special Characters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__exceptionMessage__c</fullName>
        <description>Contains any exceptions caused by this rollup</description>
        <inlineHelpText>Contains any exceptions caused by this rollup</inlineHelpText>
        <label>Exception Message</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__intermediaryObjectName__c</fullName>
        <description>The sObject of the Intermediary Lookup Field</description>
        <inlineHelpText>The sObject of the Intermediary Lookup Field</inlineHelpText>
        <label>Intermediary Object Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__intermediaryRelationshipFieldName__c</fullName>
        <description>API Name of the Rollup&apos;s intermediary relationship field</description>
        <inlineHelpText>API Name of the Rollup&apos;s intermediary relationship field</inlineHelpText>
        <label>Intermediary Relationship Field Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__intermediaryRelationshipField__c</fullName>
        <description>The Lookup Relationship field on the intermediary object which points to the target object. For example: Opportunity.AccountId</description>
        <inlineHelpText>The Lookup Relationship field on the intermediary object which points to the target object. For example: Opportunity.AccountId</inlineHelpText>
        <label>Intermediary Relationship Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__isGrandchildRollup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the rollup is a grandchild rollup.</description>
        <inlineHelpText>Indicates whether the rollup is a grandchild rollup.</inlineHelpText>
        <label>Is Grandchild Rollup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__lastModifiedBy__c</fullName>
        <description>The user that last modified the rollup.</description>
        <inlineHelpText>The user that last modified the rollup.</inlineHelpText>
        <label>Rollup Last Modified By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__lastModifiedDate__c</fullName>
        <description>String of the date and time the rollup was last modified.</description>
        <inlineHelpText>String of the date and time the rollup was last modified.</inlineHelpText>
        <label>Rollup Last Modified Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__logic__c</fullName>
        <description>The type of Rollup (MAX, MIN, SUM, etc.)</description>
        <inlineHelpText>The type of Rollup (MAX, MIN, SUM, etc.)</inlineHelpText>
        <label>Type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__maxOrMinSortField__c</fullName>
        <description>The field on the source object being sorted on in a MAX or MIN String rollup</description>
        <inlineHelpText>The field on the source object being sorted on in a MAX or MIN String rollup</inlineHelpText>
        <label>Max / Min Sort Field</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__modeTiebreaker__c</fullName>
        <label>Mode Tiebreaker</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__parentCondition__c</fullName>
        <label>Parent Condition</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__queryArchive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls whether Rollup Helper queries for deleted records.</description>
        <inlineHelpText>Controls whether Rollup Helper queries for deleted records.</inlineHelpText>
        <label>Query Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__relationshipFieldName__c</fullName>
        <description>API Name of the Rollup&apos;s relationship field</description>
        <inlineHelpText>API Name of the Rollup&apos;s relationship field</inlineHelpText>
        <label>Relationship Field Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__relationshipField__c</fullName>
        <description>The Lookup Relationship field on the source object which points to the target object. For example: Opportunity.AccountId</description>
        <inlineHelpText>The Lookup Relationship field on the source object which points to the target object. For example: Opportunity.AccountId</inlineHelpText>
        <label>Relationship Field</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__rollup__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <description>The date sync for this audit record.</description>
        <inlineHelpText>The date sync for this audit record.</inlineHelpText>
        <label>Rollup</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__setZeroResultToNull__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, when no matching child records are found for SUM or AVG rollups, Rollup Helper will roll up the results as null instead of 0.</description>
        <label>Roll Up Zero As Null</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__sourceFieldName__c</fullName>
        <description>API Name of the Rollup&apos;s source field</description>
        <inlineHelpText>API Name of the Rollup&apos;s source field</inlineHelpText>
        <label>Source Field Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__sourceFieldType__c</fullName>
        <description>Field type of the Rollup&apos;s source field</description>
        <inlineHelpText>Field type of the Rollup&apos;s source field</inlineHelpText>
        <label>Source Field Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__sourceField__c</fullName>
        <description>The field in which rollup results are sourced from. For example: Opportunity.Amount</description>
        <inlineHelpText>The field in which rollup results are sourced from. For example: Opportunity.Amount</inlineHelpText>
        <label>Source Field</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__sourceObjectName__c</fullName>
        <description>API Name of the Rollup&apos;s source object</description>
        <inlineHelpText>API Name of the Rollup&apos;s source object</inlineHelpText>
        <label>Source Object Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__targetFieldName__c</fullName>
        <description>API Name of the Rollup&apos;s target field</description>
        <inlineHelpText>API Name of the Rollup&apos;s target field</inlineHelpText>
        <label>Target Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__targetFieldType__c</fullName>
        <description>Field type of the Rollup&apos;s target field</description>
        <inlineHelpText>Field type of the Rollup&apos;s target field</inlineHelpText>
        <label>Target Field Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__targetField__c</fullName>
        <description>The object/field combination in which rollup results are populated. For example: Account.Site</description>
        <inlineHelpText>The object/field combination in which rollup results are populated. For example: Account.Site</inlineHelpText>
        <label>Target Field</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__targetObjectName__c</fullName>
        <description>API Name of the Rollup&apos;s target object</description>
        <inlineHelpText>API Name of the Rollup&apos;s target object</inlineHelpText>
        <label>Target Object Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__useCommaAndDelim__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, comma-separated rollup results will be formatted in the form &quot;one, two, and three.&quot; If unchecked, rollup results will be formatted as &quot;one, two, three.&quot;</description>
        <inlineHelpText>If checked, comma-separated rollup results will be formatted in the form &quot;one, two, and three.&quot; If unchecked, rollup results will be formatted as &quot;one, two, three.&quot;</inlineHelpText>
        <label>Use Comma-And Delimiter</label>
        <type>Checkbox</type>
    </fields>
    <label>Rollup Audit</label>
    <nameField>
        <label>Rollup Audit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rollup Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>